--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
     </style>
 </head>
 <body>
-  <!-- <div class="loader-container">
+   <div class="loader-container">
 
       <div class="loader">
           <img src="assets/logo-H.svg" alt="Loading...">
       </div>
-  </div> -->
+  </div> 
   </div>
   <div class="container h-100">
 
