--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             width: 100vw;
             height: 100vh;
             background-color: white;
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             z-index: 100;
